--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+    <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link
@@ -34,7 +34,7 @@
     >
       <!-- card -->
       <div
-        class="w-[384px] h-[522px] flex flex-col bg-white p-6 rounded-2xl mt-[200px] border border-solid border-black drop-shadow-[7px_7px_rgba(0,0,0,2)]"
+        class="card w-[384px] h-[522px] flex flex-col bg-white p-6 rounded-2xl mt-[219px] border border-solid border-black drop-shadow-[7px_7px_rgba(0,0,0,2)]"
       >
         <!-- image -->
         <div class="h-[200px] rounded-lg">
@@ -53,7 +53,7 @@
 
         <div class="flex flex-col">
           <span class="font-medium mt-3 text-[14px]">Published 21 Dec 2023</span>
-          <span class="font-extrabold mt-3 text-[24px]">HTML & CSS foundations</span>
+          <span class="font-extrabold mt-3 text-[24px] hover:text-[#f5d04e] cursor-pointer">HTML & CSS foundations</span>
           <span class="font-medium mt-3 text-[16px] text-gray-500">These languages are the backbone of every website, defining structure, content, and presentation.</span>
         </div>
 
