--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     >
       <!-- card -->
       <div
-        class="card w-[384px] h-[522px] flex flex-col bg-white p-6 rounded-2xl mt-[219px] border border-solid border-black drop-shadow-[7px_7px_rgba(0,0,0,2)]"
+        class="card w-[384px] flex flex-col bg-white p-6 rounded-2xl  mt-[154px] sm:mt-[154px] xl:mt-[217px] border border-solid border-black drop-shadow-[7px_7px_rgba(0,0,0,2)]"
       >
         <!-- image -->
         <div class="h-[200px] rounded-lg">
